[gd_scene load_steps=3 format=3 uid="uid://dr181nl0ndhsf"]

[ext_resource type="Script" path="res://objects/ui/shop_upgrade_entry.gd" id="1_sctad"]
[ext_resource type="Texture2D" uid="uid://c4h01kov17hlb" path="res://assets/sprites/upgrade_arrow.png" id="2_a6rmf"]

[node name="ShopUpgradeEntry" type="Button"]
custom_minimum_size = Vector2(250, 25)
offset_right = 215.0
offset_bottom = 24.0
script = ExtResource("1_sctad")

[node name="BlockContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 212.0
offset_bottom = 23.0

[node name="UpgradeTexture" type="TextureRect" parent="BlockContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_a6rmf")
expand_mode = 2

[node name="UpgradeNameLabel" type="Label" parent="BlockContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Standard Pickaxe"
horizontal_alignment = 3

[node name="UpgradeCostLabel" type="Label" parent="BlockContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "($400)"
horizontal_alignment = 3
